Ignore attributes 5 and 190 on some Apple SSD

http://bugs.freedesktop.org/show_bug.cgi?id=24700